--- a/assets/scss/common/_fonts_jetbrains_mono.scss
+++ b/assets/scss/common/_fonts_jetbrains_mono.scss
@@ -2,7 +2,7 @@
     JetBrains Mono
 ==========================================================*/
 @font-face {
-  font-family: 'JetBrains Mono';
+  font-family: 'JetBrains Mono Light';
   src: 
     local("JetBrainsMono"),
     url('fonts/JetBrainsMono/JetBrainsMono-Light.woff2') format('woff2');
@@ -11,7 +11,7 @@
 }
 
 @font-face {
-  font-family: 'JetBrains Mono';
+  font-family: 'JetBrains Mono Light';
   src: 
     local("JetBrainsMono"),
     url('fonts/JetBrainsMono/JetBrainsMono-LightItalic.woff2') format('woff2');
